--- a/src/main/webapp/exercises.html
+++ b/src/main/webapp/exercises.html
@@ -49,41 +49,24 @@
 			</div>
 		</div>
 		<div id="submain">
-			<center>
-				<div class="name">List Of Exercises</div>
-			</center>
+			<center><div class="name">List Of Exercises</div></center>
 			<hr />
 			<div id="div3">
 				<ul>
 					<ol>
-						<p>
-							<a onMouseOver="NhiemVu1()" onMouseOut="Xoa()" class="baitap"
-								href="ExerciseOne">Exercise number 1</a>
-						</p>
+						<p><a onMouseOver="NhiemVu1()" onMouseOut="Xoa()" class="baitap" href="ExerciseOne">Exercise number 1</a></p>
 					</ol>
 					<ol>
-						<p>
-							<a onMouseOver="NhiemVu2()" onMouseOut="Xoa()" class="baitap"
-								href="ExerciseTwo">Exercise number 2</a>
-						</p>
+						<p><a onMouseOver="NhiemVu2()" onMouseOut="Xoa()" class="baitap" href="ExerciseTwo">Exercise number 2</a></p>
 					</ol>
 					<ol>
-						<p>
-							<a onMouseOver="NhiemVu3()" onMouseOut="Xoa()" class="baitap"
-								href="ExerciseThree">Exercise number 3</a>
-						</p>
+						<p><a onMouseOver="NhiemVu3()" onMouseOut="Xoa()" class="baitap" href="ExerciseThree">Exercise number 3</a></p>
 					</ol>
 					<ol>
-						<p>
-							<a onMouseOver="NhiemVu4()" onMouseOut="Xoa()" class="baitap"
-								href="">Exercise number 4</a>
-						</p>
+						<p><a onMouseOver="NhiemVu4()" onMouseOut="Xoa()" class="baitap" href="">Exercise number 4</a></p>
 					</ol>
 					<ol>
-						<p>
-							<a onMouseOver="NhiemVu5()" onMouseOut="Xoa()" class="baitap"
-								href="">Exercise number 5</a>
-						</p>
+						<p><a onMouseOver="NhiemVu5()" onMouseOut="Xoa()" class="baitap" href="">Exercise number 5</a></p>
 					</ol>
 				</ul>
 			</div>
