--- a/src/main/webapp/exercises.html
+++ b/src/main/webapp/exercises.html
@@ -63,7 +63,7 @@
 						<p><a onMouseOver="NhiemVu3()" onMouseOut="Xoa()" class="baitap" href="ExerciseThree">Exercise number 3</a></p>
 					</ol>
 					<ol>
-						<p><a onMouseOver="NhiemVu4()" onMouseOut="Xoa()" class="baitap" href="">Exercise number 4</a></p>
+						<p><a onMouseOver="NhiemVu4()" onMouseOut="Xoa()" class="baitap" href="https://addtocartexercise.herokuapp.com/">Exercise number 4</a></p>
 					</ol>
 					<ol>
 						<p><a onMouseOver="NhiemVu5()" onMouseOut="Xoa()" class="baitap" href="">Exercise number 5</a></p>
