--- a/src/main/webapp/exercises.html
+++ b/src/main/webapp/exercises.html
@@ -66,7 +66,10 @@
 						<p><a onMouseOver="NhiemVu4()" onMouseOut="Xoa()" class="baitap" href="https://addtocartexercise.herokuapp.com/">Exercise number 4</a></p>
 					</ol>
 					<ol>
-						<p><a onMouseOver="NhiemVu5()" onMouseOut="Xoa()" class="baitap" href="">Exercise number 5</a></p>
+						<p><a onMouseOver="NhiemVu5()" onMouseOut="Xoa()" class="baitap" href="https://demowebne.herokuapp.com/">Exercise number 5</a></p>
+					</ol>
+					<ol>
+						<p><a onMouseOver="NhiemVu6()" onMouseOut="Xoa()" class="baitap" href="https://finalprojectlaptrinhweb.herokuapp.com">Final Project</a></p>
 					</ol>
 				</ul>
 			</div>
