--- a/src/main/webapp/exercises.html
+++ b/src/main/webapp/exercises.html
@@ -49,27 +49,49 @@
 			</div>
 		</div>
 		<div id="submain">
-			<center><div class="name">List Of Exercises</div></center>
+			<center>
+				<div class="name">List Of Exercises</div>
+			</center>
 			<hr />
 			<div id="div3">
 				<ul>
 					<ol>
-						<p><a onMouseOver="NhiemVu1()" onMouseOut="Xoa()" class="baitap" href="ExerciseOne">Exercise number 1</a></p>
+						<p>
+							<a onMouseOver="NhiemVu1()" onMouseOut="Xoa()" class="baitap"
+								href="ExerciseOne">Exercise number 1</a>
+						</p>
 					</ol>
 					<ol>
-						<p><a onMouseOver="NhiemVu2()" onMouseOut="Xoa()" class="baitap" href="ExerciseTwo">Exercise number 2</a></p>
+						<p>
+							<a onMouseOver="NhiemVu2()" onMouseOut="Xoa()" class="baitap"
+								href="ExerciseTwo">Exercise number 2</a>
+						</p>
 					</ol>
 					<ol>
-						<p><a onMouseOver="NhiemVu3()" onMouseOut="Xoa()" class="baitap" href="ExerciseThree">Exercise number 3</a></p>
+						<p>
+							<a onMouseOver="NhiemVu3()" onMouseOut="Xoa()" class="baitap"
+								href="ExerciseThree">Exercise number 3</a>
+						</p>
 					</ol>
 					<ol>
-						<p><a onMouseOver="NhiemVu4()" onMouseOut="Xoa()" class="baitap" href="https://addtocartexercise.herokuapp.com/">Exercise number 4</a></p>
+						<p>
+							<a onMouseOver="NhiemVu4()" onMouseOut="Xoa()" class="baitap"
+								href="https://addtocartexercise.herokuapp.com/">Exercise
+								number 4</a>
+						</p>
 					</ol>
 					<ol>
-						<p><a onMouseOver="NhiemVu5()" onMouseOut="Xoa()" class="baitap" href="https://demowebne.herokuapp.com/">Exercise number 5</a></p>
+						<p>
+							<a onMouseOver="NhiemVu5()" onMouseOut="Xoa()" class="baitap"
+								href="https://demowebne.herokuapp.com/">Exercise number 5</a>
+						</p>
 					</ol>
 					<ol>
-						<p><a onMouseOver="NhiemVu6()" onMouseOut="Xoa()" class="baitap" href="https://finalprojectlaptrinhweb.herokuapp.com">Final Project</a></p>
+						<p>
+							<a onMouseOver="NhiemVu6()" onMouseOut="Xoa()" class="baitap"
+								href="https://finalprojectlaptrinhweb.herokuapp.com">Final
+								Project</a>
+						</p>
 					</ol>
 				</ul>
 			</div>
@@ -77,5 +99,19 @@
 
 		</div>
 	</div>
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function() {
+			var s1 = document.createElement("script"), s0 = document
+					.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/6180fc3486aee40a57397c79/1fjftic78';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 </html>
